[package]
name = "leetcode-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "utils" }



[[bin]]
name = "leetcode-no1823"
path = "1800_1899/leetcode-no1823.rs"

[[bin]]
name = "leetcode-no645"
path = "0600_0699/leetcode-no645.rs"

[[bin]]
name = "leetcode-no2656"
path = "2500_2599/leetcode-no2656.rs"

[[bin]]
name = "leetcode-no1094"
path = "1000_1099/leetcode-no1094.rs"

[[bin]]
name = "leetcode-no3169"
path = "3100_3199/leetcode-no3169.rs"

[[bin]]
name = "leetcode-no1900"
path = "1900_1999/leetcode-no1900.rs"

[[bin]]
name = "leetcode-no204"
path = "0200_0299/leetcode-no204.rs"

[[bin]]
name = "leetcode-no3439"
path = "3400_3499/leetcode-no3439.rs"

[[bin]]
name = "leetcode-no3440"
path = "3400_3499/leetcode-no3440.rs"

[[bin]]
name = "ord_test"
path = "experiments/ord_test.rs"

[[bin]]
name = "leetcode-no1680"
path = "1600_1699/leetcode-no1680.rs"

[[bin]]
name = "leetcode-no1353"
path = "1300_1399/leetcode-no1353.rs"

[[bin]]
name = "leetcode-no1865"
path = "1800_1899/leetcode-no1865.rs"

[[bin]]
name = "leetcode-no2039"
path = "2000_2099/leetcode-no2039.rs"

[[bin]]
name = "leetcode-no1163"
path = "1100_1199/leetcode-no1163.rs"

[[bin]]
name = "leetcode-no3307"
path = "3300_3399/leetcode-no3307.rs"

[[bin]]
name = "leetcode-no2998"
path = "2900_2999/leetcode-no2998.rs"

[[bin]]
name = "leetcode-no856"
path = "0800_0899/leetcode-no856.rs"

[[bin]]
name = "leetcode-no3304"
path = "3300_3399/leetcode-no3304.rs"

[[bin]]
name = "leetcode-no3333"
path = "3300_3399/leetcode-no3333.rs"

[[bin]]
name = "leetcode-no1020"
path = "1000_1099/leetcode-no1020.rs"

[[bin]]
name = "leetcode-no3330"
path = "3300_3399/leetcode-no3330.rs"

[[bin]]
name = "leetcode-no1391"
path = "1300_1399/leetcode-no1391.rs"

[[bin]]
name = "leetcode-no594"
path = "0500_0599/leetcode-no594.rs"

[[bin]]
name = "leetcode-no2040"
path = ""

[[bin]]
name = "leetcode-no2099"
path = "2000_2099/leetcode-no2099.rs"

[[bin]]
name = "leetcode-no1319"
path = "1300_1399/leetcode-no1319.rs"

[[bin]]
name = "leetcode-no2401"
path = "2400_2499/leetcode-no2401.rs"

[[bin]]
name = "leetcode-no2400"
path = "2400_2499/leetcode-no2400.rs"

[[bin]]
name = "leetcode-no1329"
path = "1300_1399/leetcode-no1329.rs"

[[bin]]
name = "leetcode-no2138"
path = "2100_2199/leetcode-no2138.rs"

[[bin]]
name = "leetcode-no2200"
path = "2200_2299/leetcode-no2200.rs"

[[bin]]
name = "leetcode-no3085"
path = "3000_3099/leetcode-no3085.rs"

[[bin]]
name = "leetcode-no1377"
path = "1300_1399/leetcode-no1377.rs"

[[bin]]
name = "leetcode-no2294"
path = "2200_2299/leetcode-no2294.rs"

[[bin]]
name = "leetcode-no2966"
path = "2900_2999/leetcode-no2966.rs"

[[bin]]
name = "leetcode-no3405"
path = "3400_3499/leetcode-no3405.rs"

[[bin]]
name = "leetcode-no2016"
path = "2000_2099/leetcode-no2016.rs"

[[bin]]
name = "leetcode-no3372"
path = "3300_3399/leetcode-no3372.rs"

[[bin]]
name = "leetcode-no2750"
path = "2700_2799/leetcode-no2750.rs"

[[bin]]
name = "leetcode-no1878"
path = "1800_1899/leetcode-no1878.rs"

[[bin]]
name = "leetcode-no1504"
path = "1500_1599/leetcode-no1504.rs"

[[bin]]
name = "leetcode-no1141"
path = "1400_1499/leetcode-no1141.rs"

[[bin]]
name = "leetcode-no2894"
path = "2800_2899/leetcode-no2894.rs"

[[bin]]
name = "leetcode-no438"
path = "0400_0499/leetcode-no438.rs"

[[bin]]
name = "leetcode-no2931"
path = "2900_2999/leetcode-no2931.rs"

[[bin]]
name = "leetcode-no1857"
path = "1800_1899/leetcode-no1857.rs"

[[bin]]
name = "leetcode-no767"
path = "0700_0799/leetcode-no767.rs"

[[bin]]
name = "leetcode-no1198"
path = "1100_1199/leetcode-no1198.rs"

[[bin]]
name = "leetcode-no1184"
path = "1100_1199/leetcode-no1184.rs"

[[bin]]
name = "leetcode-no398"
path = "0300_0399/leetcode-no398.rs"

[[bin]]
name = "leetcode-no454"
path = "0400_0499/leetcode-no454.rs"

[[bin]]
name = "leetcode-no457"
path = "0400_0499/leetcode-no457.rs"

[[bin]]
name = "leetcode-no592"
path = "0500_0599/leetcode-no592.rs"

[[bin]]
name = "leetcode-no2131"
path = "2100_2199/leetcode-no2131.rs"

[[bin]]
name = "leetcode-no1221"
path = "1200_1299/leetcode-no1221.rs"

[[bin]]
name = "leetcode-no989"
path = "0900_0999/leetcode-no989.rs"

[[bin]]
name = "leetcode-no942"
path = "0900_0999/leetcode-no942.rs"

[[bin]]
name = "leetcode-no771"
path = "0700_0799/leetcode-no771.rs"

[[bin]]
name = "leetcode-no659"
path = "0600_0699/leetcode-no659.rs"

[[bin]]
name = "leetcode-no3068"
path = "3000_3099/leetcode-no3068.rs"

[[bin]]
name = "leetcode-no3362"
path = "3300_3399/leetcode-no3362.rs"

[[bin]]
name = "leetcode-no935"
path = "0900_0999/leetcode-no935.rs"

[[bin]]
name = "leetcode-no2976"
path = "2900_2999/leetcode-no2976.rs"

[[bin]]
name = "leetcode-no3355"
path = "3300_3399/leetcode-no3355.rs"

[[bin]]
name = "leetcode-no3024"
path = "3000_3099/leetcode-no3024.rs"

[[bin]]
name = "leetcode-no1931"
path = "1900_1999/leetcode-no1931.rs"

[[bin]]
name = "leetcode-no2013"
path = "2000_2099/leetcode-no2013.rs"

[[bin]]
name = "leetcode-no75"
path = "0000_0100/leetcode-no75.rs"

[[bin]]
name = "string_test"
path = "experiments/string_test.rs"

[[bin]]
name = "leetcode-no2800"
path = "2800_2899/leetcode-no2800.rs"

[[bin]]
name = "leetcode-no1584"
path = "1500_1599/leetcode-no1584.rs"

[[bin]]
name = "leetcode-no3035"
path = "3000_3099/leetcode-no3035.rs"

[[bin]]
name = "leetcode-no1405"
path = "1400_1499/leetcode-no1405.rs"

[[bin]]
name = "leetcode-no2055"
path = "2000_2099/leetcode-no2055.rs"

[[bin]]
name = "reverse_test"
path = "experiments/reverse_test.rs"

[[bin]]
name = "leetcode-no1363"
path = "1300_1399/leetcode-no1363.rs"

[[bin]]
name = "leetcode-no2900"
path = "2900_2999/leetcode-no2900.rs"

[[bin]]
name = "leetcode-no3408"
path = "3400_3499/leetcode-no3408.rs"

[[bin]]
name = "leetcode-no3337"
path = "3300_3399/leetcode-no3337.rs"

[[bin]]
name = "leetcode-no3335"
path = "3300_3399/leetcode-no3335.rs"

[[bin]]
name = "leetcode-no1177"
path = "1100_1199/leetcode-no1177.rs"

[[bin]]
name = "leetcode-no2598"
path = "2500_2599/leetcode-no2598.rs"

[[bin]]
name = "leetcode-no2501"
path = "2500_2599/leetcode-no2501.rs"

[[bin]]
name = "leetcode-no3099"
path = "3000_3099/leetcode-no3099.rs"

[[bin]]
name = "leetcode-no997"
path = "0900_0999/leetcode-no997.rs"

[[bin]]
name = "leetcode-no1510"
path = "1500_1599/leetcode-no1510.rs"

[[bin]]
name = "leetcode-no2568"
path = "2500_2599/leetcode-no2568.rs"

[[bin]]
name = "leetcode-no2075"
path = "2000_2099/leetcode-no2075.rs"

[[bin]]
name = "leetcode-no2171"
path = "2100_2199/leetcode-no2171.rs"

[[bin]]
name = "leetcode-no1920"
path = "1900_1999/leetcode-no1920.rs"

[[bin]]
name = "leetcode-no2166"
path = "2100_2199/leetcode-no2166.rs"

[[bin]]
name = "leetcode-no1024"
path = "1000_1099/leetcode-no1024.rs"

[[bin]]
name = "leetcode-no1111"
path = "1100_1199/leetcode-no1111.rs"

[[bin]]
name = "leetcode-no1295"
path = "1200_1299/leetcode-no1295.rs"

[[bin]]
name = "recursive_test"
path = "experiments/recursive_test.rs"

[[bin]]
name = "atest"
path = "experiments/atest.rs"

[[bin]]
name = "test"
path = "experiments/test.rs"

[[bin]]
name = "leetcode-no1846"
path = "1800_1899/leetcode-no1849.rs"

[[bin]]
name = "leetcode-no2962"
path = "2900_2999/leetcode-no2962.rs"

[[bin]]
name = "leetcode-no3342"
path = "3300_3399/leetcode-no3342.rs"

[[bin]]
name = "leetcode-no3341"
path = "3300_3399/leetcode-no3341.rs"

[[bin]]
name = "leetcode-no2302"
path = "2300_2399/leetcode-no2302.rs"


[[bin]]
name = "leetcode-no3315"
path = "3300_3399/leetcode-no3315.rs"

[[bin]]
name = "leetcode-no1567"
path = "1500_1599/leetcode-no1567.rs"

[[bin]]
name = "leetcode-no376"
path = "0300_0399/leetcode-no376.rs"

[[bin]]
name = "leetcode-no744"
path = "0700_0799/leetcode-no744.rs"

[[bin]]
name = "leetcode-no747"
path = "0700_0799/leetcode-no747.rs"

[[bin]]
name = "leetcode-no2845"
path = "2800_2899/leetcode-no2845.rs"

[[bin]]
name = "leetcode-no2799"
path = "2700_2799/leetcode-no2799.rs"

[[bin]]
name = "leetcode-no32"
path = "0000_0100/leetcode-no32.rs"

[[bin]]
name = "leetcode-no1266"
path = "1200_1299/leetcode-no1266.rs"

[[bin]]
name = "leetcode-no1078"
path = "1000_1099/leetcode-no1078.rs"

[[bin]]
name = "leetcode-no1399"
path = "1300_1399/leetcode-no1399.rs"

[[bin]]
name = "leetcode-no2338"
path = "2300_2399/leetcode-no2338.rs"

[[bin]]
name = "leetcode-no859"
path = "0800_0899/leetcode-no859.rs"

[[bin]]
name = "leetcode-no2197"
path = "2100_2199/leetcode-no2179.rs"

[[bin]]
name = "leetcode-no2145"
path = "2100_2199/leetcode-no2145.rs"


[[bin]]
name = "leetcode-no2176"
path = "2100_2199/leetcode-no2176.rs"

[[bin]]
name = "leetcode-no1534"
path = "1500_1599/leetcode-no1534.rs"


[[bin]]
name = "leetcode-no375"
path = "0300_0399/leetcode-no375.rs"

[[bin]]
name = "leetcode-no1013"
path = "1000_1099/leetcode-no1013.rs"


[[bin]]
name = "leetcode-no2563"
path = "2500_2599/leetcode-no2563.rs"


[[bin]]
name = "leetcode-no1047"
path = "1000_1099/leetcode-no1047.rs"


[[bin]]
name = "leetcode-no334"
path = "0300_0399/leetcode-no334.rs"

[[bin]]
name = "leetcode-no2364"
path = "2300_2399/leetcode-no2364.rs"

[[bin]]
name = "leetcode-no1030"
path = "1000_1099/leetcode-no1030.rs"


[[bin]]
name = "leetcode-no1018"
path = "1000_1099/leetcode-no1018.rs"

[[bin]]
name = "leetcode-no1922"
path = "1900_1999/leetcode-no1922.rs"

[[bin]]
name = "leetcode-no2109"
path = "2100_2199/leetcode-no2109.rs"

[[bin]]
name = "leetcode-no2278"
path = "2200_2299/leetcode-no2278.rs"

[[bin]]
name = "leetcode-no3396"
path = "3300_3399/leetcode-no3396.rs"

[[bin]]
name = "leetcode-no1863"
path = "1800_1899/leetcode-no1863.rs"

[[bin]]
name = "leetcode-no3375"
path = "3300_3399/leetcode-no3375.rs"

[[bin]]
name = "leetcode-no2843"
path = "2800_2899/leetcode-no2843.rs"

[[bin]]
name = "leetcode-no821"
path = "0800_0899/leetcode-no821.rs"
