[package]
name = "leetcode-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "utils" }

[[bin]]
name = "leetcode-no2501"
path = "2500_2599/leetcode-no2501.rs"

[[bin]]
name = "leetcode-no3099"
path = "3000_3099/leetcode-no3099.rs"

[[bin]]
name = "leetcode-no997"
path = "0900_0999/leetcode-no997.rs"

[[bin]]
name = "leetcode-no1510"
path = "1500_1599/leetcode-no1510.rs"

[[bin]]
name = "leetcode-no2568"
path = "2500_2599/leetcode-no2568.rs"

[[bin]]
name = "leetcode-no2075"
path = "2000_2099/leetcode-no2075.rs"

[[bin]]
name = "leetcode-no2171"
path = "2100_2199/leetcode-no2171.rs"

[[bin]]
name = "leetcode-no1920"
path = "1900_1999/leetcode-no1920.rs"

[[bin]]
name = "leetcode-no2166"
path = "2100_2199/leetcode-no2166.rs"

[[bin]]
name = "leetcode-no1024"
path = "1000_1099/leetcode-no1024.rs"

[[bin]]
name = "leetcode-no1111"
path = "1100_1199/leetcode-no1111.rs"

[[bin]]
name = "leetcode-no1295"
path = "1200_1299/leetcode-no1295.rs"

[[bin]]
name = "recursive_test"
path = "experiments/recursive_test.rs"

[[bin]]
name = "atest"
path = "experiments/atest.rs"

[[bin]]
name = "test"
path = "experiments/test.rs"

[[bin]]
name = "leetcode-no1846"
path = "1800_1899/leetcode-no1849.rs"

[[bin]]
name = "leetcode-no2962"
path = "2900_2999/leetcode-no2962.rs"

[[bin]]
name = "leetcode-no3342"
path = "3300_3399/leetcode-no3342.rs"

[[bin]]
name = "leetcode-no3341"
path = "3300_3399/leetcode-no3341.rs"

[[bin]]
name = "leetcode-no2302"
path = "2300_2399/leetcode-no2302.rs"


[[bin]]
name = "leetcode-no3315"
path = "3300_3399/leetcode-no3315.rs"

[[bin]]
name = "leetcode-no1567"
path = "1500_1599/leetcode-no1567.rs"

[[bin]]
name = "leetcode-no376"
path = "0300_0399/leetcode-no376.rs"

[[bin]]
name = "leetcode-no744"
path = "0700_0799/leetcode-no744.rs"

[[bin]]
name = "leetcode-no747"
path = "0700_0799/leetcode-no747.rs"

[[bin]]
name = "leetcode-no2845"
path = "2800_2899/leetcode-no2845.rs"

[[bin]]
name = "leetcode-no2799"
path = "2700_2799/leetcode-no2799.rs"

[[bin]]
name = "leetcode-no32"
path = "0000_0100/leetcode-no32.rs"

[[bin]]
name = "leetcode-no1266"
path = "1200_1299/leetcode-no1266.rs"

[[bin]]
name = "leetcode-no1078"
path = "1000_1099/leetcode-no1078.rs"

[[bin]]
name = "leetcode-no1399"
path = "1300_1399/leetcode-no1399.rs"

[[bin]]
name = "leetcode-no2338"
path = "2300_2399/leetcode-no2338.rs"

[[bin]]
name = "leetcode-no859"
path = "0800_0899/leetcode-no859.rs"

[[bin]]
name = "leetcode-no2197"
path = "2100_2199/leetcode-no2179.rs"

[[bin]]
name = "leetcode-no2145"
path = "2100_2199/leetcode-no2145.rs"


[[bin]]
name = "leetcode-no2176"
path = "2100_2199/leetcode-no2176.rs"

[[bin]]
name = "leetcode-no1534"
path = "1500_1599/leetcode-no1534.rs"


[[bin]]
name = "leetcode-no375"
path = "0300_0399/leetcode-no375.rs"

[[bin]]
name = "leetcode-no1013"
path = "1000_1099/leetcode-no1013.rs"


[[bin]]
name = "leetcode-no2563"
path = "2500_2599/leetcode-no2563.rs"


[[bin]]
name = "leetcode-no1047"
path = "1000_1099/leetcode-no1047.rs"


[[bin]]
name = "leetcode-no334"
path = "0300_0399/leetcode-no334.rs"

[[bin]]
name = "leetcode-no2364"
path = "2300_2399/leetcode-no2364.rs"

[[bin]]
name = "leetcode-no1030"
path = "1000_1099/leetcode-no1030.rs"


[[bin]]
name = "leetcode-no1018"
path = "1000_1099/leetcode-no1018.rs"

[[bin]]
name = "leetcode-no1922"
path = "1900_1999/leetcode-no1922.rs"

[[bin]]
name = "leetcode-no2109"
path = "2100_2199/leetcode-no2109.rs"

[[bin]]
name = "leetcode-no2278"
path = "2200_2299/leetcode-no2278.rs"

[[bin]]
name = "leetcode-no3396"
path = "3300_3399/leetcode-no3396.rs"

[[bin]]
name = "leetcode-no1863"
path = "1800_1899/leetcode-no1863.rs"

[[bin]]
name = "leetcode-no3375"
path = "3300_3399/leetcode-no3375.rs"

[[bin]]
name = "leetcode-no2843"
path = "2800_2899/leetcode-no2843.rs"

[[bin]]
name = "leetcode-no821"
path = "0800_0899/leetcode-no821.rs"
